[package]
name = "chain-decode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chain-decoder"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.0"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
futures = "0.3.23"
reqwest = "0.11.11"
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"